fix: remove the extra margin

--- a/blocks/two-columns/__brief/two-columns__brief.css
+++ b/blocks/two-columns/__brief/two-columns__brief.css
@@ -1,7 +1,6 @@
 .two-columns__brief {
   width: 175px;
   margin: 0;
-  margin-right: 55px;
   color: var(--main-link);
   font-weight: 400;
   font-size: 18px;
